fix fab on mobile

--- a/css/google.css
+++ b/css/google.css
@@ -309,6 +309,9 @@ h5 {
 }
 
 @media (max-width: 600px) {
+  body {
+    cursor: pointer;
+  }
   .vert-name {
     display: none;
   }
